# light-manager

./: Cargo.toml  config.toml  dist-workspace.toml
.github/workflows/: release.yml
light-manager/: Cargo.toml
light-manager/src/: app_config.rs  lib.rs  light_runtime.rs  main.rs  tcp_manager.rs  telemetry.rs  web_server.rs
light-manager/src/config/: mod.rs
light-manager/src/light/: mod.rs  protocol.rs  runtime.rs  tcp_manager.rs
light-manager/src/observability/: log_retention.rs  mod.rs  telemetry.rs
light-manager/src/web/: api_response.rs  http_trace.rs  mod.rs  server.rs
